# bramlett

./: .gitignore  .gitpod.yml  Cargo.toml  Justfile  LICENSE  Makefile.toml  README.md  deploy.sh  flutter_rust_bridge.yaml  games.json  gitpod.Dockerfile  index.html  pubspec.yaml
.github/workflows/: release.yml  upload.yml  web.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bramletts_games/: MainActivity.kt
crates/client/: Cargo.toml
crates/client/frontend/: codegen.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
crates/client/frontend/rspc-pkgs/: tsconfig.json
crates/client/frontend/rspc-pkgs/client/: package.json
crates/client/frontend/rspc-pkgs/query-core/: package.json
crates/client/frontend/rspc-pkgs/react-query/: package.json
crates/client/frontend/rspc-pkgs/react-query/src/: index.tsx
crates/client/frontend/rspc-pkgs/svelte-query/: package.json
crates/client/frontend/src/__generated__/: gql.ts  graphql.ts
crates/client/frontend/src/app/: layout.tsx  page.tsx
crates/client/frontend/src/components/: apollo-provider.tsx  game-list.tsx  providers.tsx  rspc-wrapper.tsx
crates/client/frontend/src/lib/: GameStatus.svelte  apollo-client.ts  apolloClient.ts  app.css  bindings.ts  rspc.ts
crates/client/frontend/src/lib/gql/: delete.gql  download.gql  index.ts  mutations.gql  queries.gql  run.gql  update.gql
crates/client/frontend/src/routes/: +layout.svelte  +page.svelte  game-list.tsx
crates/client/src/: app.rs  download.rs  firefox.rs  gql.rs  lib.rs  main.rs  py.rs  rhai_fs_path.rs  socks5.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml  sqlite.db
crates/server/entity/src/entities/: game.rs  mod.rs  prelude.rs
crates/server/migration/src/: lib.rs  m20231108_221230_games_table.rs
crates/server/scripts/: bloons_td_6.rhai  fnaf.rhai  fnaf2.rhai  geometry_dash.rhai  goose.rhai  omori.rhai  papers_please.py  papers_please.rhai  portal.rhai  superhot.rhai  undertale.rhai
crates/server/src/: main.rs
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: games.dart  main.dart  progress.dart  unblocked.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: games.dart
lib/src/rust/core/: game.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: error.rs  games.rs  mod.rs  simple.rs
rust/src/core/: db.rs  dir.rs  dirs.rs  download.rs  extract.rs  game.rs  librewolf.rs  mod.rs  update.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
