[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

[workspace]
members = ["crates/client", "crates/server", "crates/common"]

resolver = "2"

[patch.crates-io]
# the regular version restricts time to v <0.3.21 which doesn't play well with other packages
unicode_names2 = { git = "https://github.com/TheBotlyNoob/unicode_names2" }
