[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.2"
flutter_rust_bridge = { version = "=2.0.0-dev.20", features = ["uuid"] } 
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sevenz-rust = { version = "0.5.4", features = ["aes256"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", default-features = false, features = ["fs"] }
uuid = { version = "1.6.1", features = ["serde"] }
