[package]
name = "rust_lib"
version = "0.0.0-git"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
allo-isolate = "0.1.24"
dirs = "5.0.1"
env_logger = "0.10.2"
flutter_rust_bridge = "=2.0.0-dev.21" 
futures = { version = "0.3.30", default-features = false, features = ["async-await", "std", "executor"] }
hex = "0.4.3"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "stream", "native-tls-vendored"] }
rfd = "0.13.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sevenz-rust = { version = "0.5.4", features = ["aes256"] }
sha2 = "0.10.8"
shellexpand = "3.1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros", "json"], default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", default-features = false, features = ["fs", "process"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
