[package]
name = "bramlett"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### lib ###
common = { path = "../common" }
dashmap = { version = "5.5.3", features = ["serde"] }
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = [
    "json",
    "stream",
    "native-tls",
    "native-tls-vendored",
] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = [
    "sync",
    "rt",
    "process",
    "rt-multi-thread", # server
] }
tracing = "0.1.40"
tl = "0.7.7"
sevenz-rust = { version = "0.5.3", features = ["aes256"] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "6d23daa" }

### server ###
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "0fc95dd" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", rev = "0fc95dd" }
futures = "0.3.29"
warp = "0.3.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rust-embed = { version = "8.0.0", features = ["warp"] }
mime_guess = "2.0.4"
webbrowser = "0.8.12"
self_update = { version = "0.39.0", default-features = false, features = [
    "archive-zip",
    "compression-zip-deflate",
] }
wry = { version = "0.34.2", features = ["tao"], default-features = false }
tao = "0.23.0"
