[package]
name = "common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "0fc95dd" }
