[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.39"
