[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
shuttle-warp = "0.31.0"
shuttle-runtime = "0.31.0"
common = { path = "../common" }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.39"
